--- a/src/index.scss
+++ b/src/index.scss
@@ -36,7 +36,7 @@ input:focus {
 }
 
 .headerText {
-  font-weight: 400;
+  font-weight: 600;
 }
 
 .reload {
@@ -65,12 +65,15 @@ input:focus {
   margin: 10px 0;
   padding: 0;
   padding-left: 20px;
+  padding-top: 20px;
   border: none;
   border-bottom: $border-default;
   border-color: $border-color;
   width: 95%;
   font-style: italic;
 }
+
+
 
 .todo-list {
   display: flex;
@@ -79,9 +82,12 @@ input:focus {
 
 .list {
   border: none;
-  padding: 10px 20px;
+  padding: 10px 30px;
   width: 80%;
-  border-radius: 10px;
+}
+
+.list:focus {
+  background-color: #fffEC3;
 }
 
 .wrapper,
@@ -90,13 +96,30 @@ input:focus {
   padding-right: 0;
   border-bottom: $border-default;
   border-color: $border-color;
+  position: relative;
+}
+
+.collectionMenu {
+  display: flex;
+}
+
+.menu {
+  width: 3px;
+  user-select: none;
+  
+}
+
+.trashcan {
+  width: 16px;
+  position: relative;
+  left: -10px;
 }
 
 .check {
   position: relative;
-  top: 2px;
-  width: 12px;
-  height: 12px;
+  top: 29px;
+  width: 14px;
+  height: 14px;
 }
 
 .clear {
@@ -119,4 +142,12 @@ input:focus {
 
 .clear:active {
   background-color: #d1d0d0;
+}
+
+.red {
+  border: 2px solid red;
+}
+
+.hide {
+  display: none
 }
